Add api project config and config (#5)
* update compose reduce size

* add get config by major id , project config by major id and upsert project config
